refactor: add ServiceInfoProvider and add support for Java 8